# homeworkcpp

./: .gitignore  CMakeLists.txt  Group.h  User.cpp  User.h  UserManager.cpp  main.cpp
Task1/: CMakeLists.txt
Task1/src/: CommandProcessor.cpp  CommandProcessor.h  Group.cpp  Group.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp
Task2/: CmakeLists.txt
Task2/src/: TypeList.h  main.cpp
Task3/: CmakeLists.txt
Task3/src/: TypeMap.h  main.cpp
Task4/src/: Mixins.h  main.cpp
Task5/: CMakeLists.txt
Task5/src/: log.cpp  log.h  main.cpp
Task6/: CMakeLists.txt
Task6/src/: checkpoint.h  checkpoint_builder.h  main.cpp  penalty_builder.h  route_director.h  text_builder.h
Task7/: CMakeLists.txt
Task7/src/: hash_set_impl.h  main.cpp  set.h  set_impl.h  vector_set_impl.h
Task8/: CMakeLists.txt
Task8/src/: binary_operation.h  espression_factory.h  expression.h  main.cpp  operations.h  primitive_expressions.h
src/: CommandProcessor.cpp  Group.cpp  UserManager.cpp  UserManager.h
